--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ enable_audio_bell no
 background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
-remember_window_size    yes
+remember_window_size    no
 initial_window_width    76c
 initial_window_height   36c
 bell_border_color       #000010
@@ -26,7 +26,7 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               16
+font_size               13
 font_family             IBM Plex Mono
 bold_font               IBM Plex Mono Bold
 italic_font             IBM Plex Mono Italic
@@ -66,34 +66,34 @@ strip_trailing_spaces   always
 #color13                 #D194BD
 #color14                 #94D1D1
 
-# MELANGE LIGHT
-background #F4F0ED
-foreground #6B5C4D
-cursor     #FFB347
-url_color  #485F84
-selection_background    #DED2C8
-selection_foreground    #6B5C4D
-tab_bar_background      #E9E1DB
-active_tab_background   #E9E1DB
-active_tab_foreground   #C29830
-inactive_tab_background #E9E1DB
-inactive_tab_foreground #867462
-color0  #E9E1DB
-color1  #D7898C
-color2  #83B887
-color3  #C29830
-color4  #485F84
-color5  #BE79BB
-color6  #729893
-color7  #A38D78
-color8  #DED2C8
-color9  #C65333
-color10 #659E69
-color11 #C29830
-color12 #485F84
-color13 #854882
-color14 #436460
-color15 #867462
+## MELANGE LIGHT
+#background #F4F0ED
+#foreground #6B5C4D
+#cursor     #FFB347
+#url_color  #485F84
+#selection_background    #DED2C8
+#selection_foreground    #6B5C4D
+#tab_bar_background      #E9E1DB
+#active_tab_background   #E9E1DB
+#active_tab_foreground   #C29830
+#inactive_tab_background #E9E1DB
+#inactive_tab_foreground #867462
+#color0  #E9E1DB
+#color1  #D7898C
+#color2  #83B887
+#color3  #C29830
+#color4  #485F84
+#color5  #BE79BB
+#color6  #729893
+#color7  #A38D78
+#color8  #DED2C8
+#color9  #C65333
+#color10 #659E69
+#color11 #C29830
+#color12 #485F84
+#color13 #854882
+#color14 #436460
+#color15 #867462
 
 ## MATERIAL DARKER
 #background            #222222
@@ -143,12 +143,12 @@ cursor_text_color               #1C1917
 # kitty window border colors
 # OS Window titlebar colors
 # Tab bar colors
-active_tab_background   #38332E
-active_tab_foreground   #E09952
-inactive_tab_background #38332E
-inactive_tab_foreground #C9B39C
-active_border_color     #EDE6DE
-inactive_border_color   #463F3A
+inactive_tab_background   #1C1917
+inactive_tab_foreground   #B4BDC3
+active_tab_background     #403833
+active_tab_foreground     #888F94
+active_border_color       #GGGGGG
+inactive_border_color     #GGGGGG
 # Colors for marks (marked text in the terminal)
 # The basic 16 colors
 # black
