--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,8 +9,8 @@ background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
-initial_window_width    81c
-initial_window_height   36c
+initial_window_width    70c
+initial_window_height   40c
 bell_border_color       #000010
 enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -27,7 +27,7 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               15
+font_size               18
 font_family             Liga SFMono Nerd Font
 bold_font               Liga SFMono Nerd Font Bold
 italic_font             Liga SFMono Nerd Font Italic
@@ -71,3 +71,33 @@ color14                 #8ec07c
 # white
 color7                  #a89984
 color15                 #fbf1c7
+
+#foreground            #d4d4d4
+#background            #1e1e1e
+#selection_foreground  #1e1e1e
+#selection_background  #d7ba7d
+#url_color             #0087BD
+## black
+#color0   #1e1e1e
+#color8   #808080
+## red
+#color1   #f44747
+#color9   #f44747
+## green
+#color2   #608b4e
+#color10  #608b4e
+## yellow
+#color3   #dcdcaa
+#color11  #dcdcaa
+## blue
+#color4  #569cd6
+#color12 #569cd6
+## magenta
+#color5   #c678dd
+#color13  #c678dd
+## cyan
+#color6   #56b6c2
+#color14  #56b6c2
+## white
+#color7   #d4d4d4
+#color15  #d4d4d4
