--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@ macos_quit_when_last_window_closed yes
 # WINDOW
 enable_audio_bell no
 background_opacity      1.0
-hide_window_decorations no
+hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
 initial_window_width    90c
