--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,8 +4,7 @@ map ctrl+shift+enter    new_window_with_cwd
 macos_quit_when_last_window_closed yes
 
 # WINDOW
-enable_audio_bell no
-background_opacity      1.0
+enable_audio_bell no background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
@@ -47,13 +46,19 @@ selection_foreground    #928374
 selection_background    #ebdbb2
 inactive_border_color   #282828
 active_border_color     #7c6f64
+active_tab_foreground   #000000
+active_tab_background   #fabd2f
+active_tab_font_style   bold-italic
+inactive_tab_foreground #7c6f64
+inactive_tab_background #282828
+inactive_tab_font_style normal
 # black
 color0                  #282828
 color8                  #7c6f64
 # red
 color1                  #cc241d
 color9                  #fb4934
-#: green
+# green
 color2                  #98971a
 color10                 #b8bb26
 # yellow
