--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,14 +4,15 @@ map ctrl+shift+enter    new_window_with_cwd
 macos_quit_when_last_window_closed yes
 
 # WINDOW
-enable_audio_bell no background_opacity      1.0
+enable_audio_bell no
+background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
 initial_window_width    90c
 initial_window_height   32c
 bell_border_color       #000010
-enabled_layouts fat:bias=70;full_size=1;mirrored=false
+enabled_layouts tall:bias=50;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        2000
 mouse_hide_wait         0.4
@@ -26,7 +27,7 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               18
+font_size               17
 font_family             Liga SFMono Nerd Font
 bold_font               Liga SFMono Nerd Font Bold
 italic_font             Liga SFMono Nerd Font Italic
