--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -15,7 +15,7 @@ bell_border_color       #000010
 enabled_layouts tall:bias=50;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        2000
-mouse_hide_wait         0.4
+#mouse_hide_wait         0.4
 
 # EDITOR
 editor                  nvim
