--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@ macos_quit_when_last_window_closed yes
 # WINDOW
 enable_audio_bell no
 background_opacity      1.0
-hide_window_decorations yes
+hide_window_decorations no
 window_padding_width    0
 remember_window_size    no
 initial_window_width    90c
@@ -20,6 +20,8 @@ mouse_hide_wait         0.1
 # EDITOR
 editor                  nvim
 input_delay             1
+cursor_shape            block
+cursor_beam_thickness   100
 cursor_blink_interval   0
 
 # TABS
