--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,13 +6,13 @@ macos_quit_when_last_window_closed yes
 # WINDOW
 enable_audio_bell no
 background_opacity      1.0
-hide_window_decorations no
+hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
 initial_window_width    90c
 initial_window_height   32c
 bell_border_color       #000010
-enabled_layouts tall:bias=50;full_size=1;mirrored=false
+enabled_layouts fat:bias=72;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        2000
 mouse_hide_wait         0.1
@@ -29,7 +29,7 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               17
+font_size               21
 font_family             Liga SFMono Nerd Font
 bold_font               Liga SFMono Nerd Font Bold
 italic_font             Liga SFMono Nerd Font Italic
@@ -39,8 +39,7 @@ detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
-# Based on https://github.com/morhetz/gruvbox by morhetz <morhetz@gmail.com>
-# Adapted to kitty by wdomitrz <witekdomitrz@gmail.com>
+## GRUVBOX by morhetz@gmail.com, adapted by witekdomitrz@gmail.com
 #cursor                  #fbf1c7
 #cursor_text             #000000
 #background              #282828
@@ -80,43 +79,20 @@ strip_trailing_spaces   always
 #color7                  #a89984
 #color15                 #fbf1c7
 
-#foreground            #d4d4d4
-#background            #1e1e1e
-#selection_foreground  #1e1e1e
-#selection_background  #d7ba7d
-#url_color             #0087BD
-## black
-#color0   #1e1e1e
-#color8   #808080
-## red
-#color1   #f44747
-#color9   #f44747
-## green
-#color2   #608b4e
-#color10  #608b4e
-## yellow
-#color3   #dcdcaa
-#color11  #dcdcaa
-## blue
-#color4  #569cd6
-#color12 #569cd6
-## magenta
-#color5   #c678dd
-#color13  #c678dd
-## cyan
-#color6   #56b6c2
-#color14  #56b6c2
-## white
-#color7   #d4d4d4
-#color15  #d4d4d4
-
-# vscode dark color scheme for Kitty
-# By https://github/mofiqul
-foreground            #d4d4d4
-background            #1e1e1e
-selection_foreground  #1e1e1e
-selection_background  #d7ba7d
-url_color             #0087BD
+# VSCODE DARK by https://github/mofiqul
+foreground              #d4d4d4
+background              #1e1e1e
+selection_foreground    #1e1e1e
+selection_background    #d7ba7d
+url_color               #0087BD
+inactive_border_color   #222222
+active_border_color     #222222
+active_tab_foreground   #000000
+active_tab_background   #fabd2f
+active_tab_font_style   bold-italic
+inactive_tab_foreground #7c6f64
+inactive_tab_background #282828
+inactive_tab_font_style normal
 # black
 color0   #1e1e1e
 color8   #808080
