--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@ macos_quit_when_last_window_closed yes
 # WINDOW
 enable_audio_bell no
 background_opacity      1.0
-hide_window_decorations yes
+hide_window_decorations no
 window_padding_width    0
 remember_window_size    no
 initial_window_width    90c
@@ -20,8 +20,8 @@ mouse_hide_wait         0.1
 # EDITOR
 editor                  nvim
 input_delay             1
-cursor_shape            block
-cursor_beam_thickness   100
+#cursor_shape            block
+#cursor_beam_thickness   100
 cursor_blink_interval   0
 
 # TABS
@@ -29,7 +29,7 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               21
+font_size               18
 font_family             Liga SFMono Nerd Font
 bold_font               Liga SFMono Nerd Font Bold
 italic_font             Liga SFMono Nerd Font Italic
