--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,8 +9,8 @@ background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
-initial_window_width    90c
-initial_window_height   27c
+initial_window_width    108c
+initial_window_height   33c
 bell_border_color       #000010
 enabled_layouts fat:bias=76;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -30,9 +30,10 @@ tab_separator           "|"
 
 # FONT
 font_size               18
-font_family             Liga SFMono Nerd Font
-bold_font               Liga SFMono Nerd Font Bold
-italic_font             Liga SFMono Nerd Font Italic
+font_family             Andale Mono
+#font_family             Liga SFMono Nerd Font
+#bold_font               Liga SFMono Nerd Font Bold
+#italic_font             Liga SFMono Nerd Font Italic
 
 # CLIPBOARD
 detect_urls             yes
