--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -18,10 +18,9 @@ scrollback_lines        2000
 mouse_hide_wait         0.1
 
 # EDITOR
+shell_integration       no-cursor
 editor                  nvim
-input_delay             1
-#cursor_shape            block
-#cursor_beam_thickness   100
+input_delay             3
 cursor_blink_interval   0
 
 # TABS
@@ -29,12 +28,10 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               27
-font_family             ProggyCleanTT
-#font_family             Andale Mono
-#bold_font               Andale Mono Bold
-#italic_font             Andale Mono Italic
-
+font_size               22
+font_family             Andale Mono
+bold_font               Andale Mono Bold
+italic_font             Andale Mono Italic
 #font_family             Liga SFMono Nerd Font
 #bold_font               Liga SFMono Nerd Font Bold
 #italic_font             Liga SFMono Nerd Font Italic
