--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,7 +10,7 @@ hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
 initial_window_width    81c
-initial_window_height   33c
+initial_window_height   36c
 bell_border_color       #000010
 enabled_layouts fat:bias=76;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -18,7 +18,7 @@ scrollback_lines        2000
 mouse_hide_wait         0.1
 
 # EDITOR
-shell_integration       no-cursor
+#shell_integration       no-cursor
 editor                  nvim
 input_delay             3
 cursor_blink_interval   0
@@ -28,7 +28,7 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               22
+font_size               18
 font_family             Andale Mono
 bold_font               Andale Mono Bold
 italic_font             Andale Mono Italic
@@ -41,81 +41,81 @@ detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
-## GRUVBOX by morhetz@gmail.com, adapted by witekdomitrz@gmail.com
-#cursor                  #fbf1c7
-#cursor_text             #000000
-#background              #282828
-#foreground              #fbf1c7
-#selection_foreground    #928374
-#selection_background    #ebdbb2
-#inactive_border_color   #282828
-#active_border_color     #7c6f64
-#active_tab_foreground   #000000
-#active_tab_background   #fabd2f
-#active_tab_font_style   bold-italic
-#inactive_tab_foreground #7c6f64
-#inactive_tab_background #282828
-#inactive_tab_font_style normal
-## black
-#color0                  #282828
-#color8                  #7c6f64
-## red
-#color1                  #cc241d
-#color9                  #fb4934
-## green
-#color2                  #98971a
-#color10                 #b8bb26
-## yellow
-#color3                  #d79921
-#color11                 #fabd2f
-## blue
-#color4                  #458588
-#color12                 #83a598
-## purple
-#color5                  #b16286
-#color13                 #d3869b
-## aqua
-#color6                  #689d6a
-#color14                 #8ec07c
-## white
-#color7                  #a89984
-#color15                 #fbf1c7
-
-# VSCODE DARK by https://github/mofiqul
-foreground              #d4d4d4
-background              #1e1e1e
-selection_foreground    #1e1e1e
-selection_background    #d7ba7d
-url_color               #0087BD
-inactive_border_color   #222222
-active_border_color     #222222
-active_tab_foreground   #D4D4D4
-active_tab_background   #373737
+# GRUVBOX by morhetz@gmail.com, adapted by witekdomitrz@gmail.com
+cursor                  #fbf1c7
+cursor_text             #000000
+background              #282828
+foreground              #fbf1c7
+selection_foreground    #928374
+selection_background    #ebdbb2
+inactive_border_color   #282828
+active_border_color     #7c6f64
+active_tab_foreground   #000000
+active_tab_background   #fabd2f
 active_tab_font_style   bold-italic
-inactive_tab_foreground #5A5A5A
-inactive_tab_background #262626
+inactive_tab_foreground #7c6f64
+inactive_tab_background #282828
 inactive_tab_font_style normal
 # black
-color0   #1e1e1e
-color8   #808080
+color0                  #282828
+color8                  #7c6f64
 # red
-color1   #f44747
-color9   #f44747
+color1                  #cc241d
+color9                  #fb4934
 # green
-color2   #608b4e
-color10  #608b4e
+color2                  #98971a
+color10                 #b8bb26
 # yellow
-color3   #dcdcaa
-color11  #dcdcaa
+color3                  #d79921
+color11                 #fabd2f
 # blue
-color4  #569cd6
-color12 #569cd6
-# magenta
-color5   #c678dd
-color13  #c678dd
-# cyan
-color6   #56b6c2
-color14  #56b6c2
+color4                  #458588
+color12                 #83a598
+# purple
+color5                  #b16286
+color13                 #d3869b
+# aqua
+color6                  #689d6a
+color14                 #8ec07c
 # white
-color7   #d4d4d4
-color15  #d4d4d4
+color7                  #a89984
+color15                 #fbf1c7
+
+## VSCODE DARK by https://github/mofiqul
+#foreground              #d4d4d4
+#background              #1e1e1e
+#selection_foreground    #1e1e1e
+#selection_background    #d7ba7d
+#url_color               #0087BD
+#inactive_border_color   #222222
+#active_border_color     #222222
+#active_tab_foreground   #D4D4D4
+#active_tab_background   #373737
+#active_tab_font_style   bold-italic
+#inactive_tab_foreground #5A5A5A
+#inactive_tab_background #262626
+#inactive_tab_font_style normal
+## black
+#color0   #1e1e1e
+#color8   #808080
+## red
+#color1   #f44747
+#color9   #f44747
+## green
+#color2   #608b4e
+#color10  #608b4e
+## yellow
+#color3   #dcdcaa
+#color11  #dcdcaa
+## blue
+#color4  #569cd6
+#color12 #569cd6
+## magenta
+#color5   #c678dd
+#color13  #c678dd
+## cyan
+#color6   #56b6c2
+#color14  #56b6c2
+## white
+#color7   #d4d4d4
+#color15  #d4d4d4
