--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -41,81 +41,81 @@ detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
-# GRUVBOX by morhetz@gmail.com, adapted by witekdomitrz@gmail.com
-cursor                  #fbf1c7
-cursor_text             #000000
-background              #282828
-foreground              #fbf1c7
-selection_foreground    #928374
-selection_background    #ebdbb2
-inactive_border_color   #282828
-active_border_color     #7c6f64
-active_tab_foreground   #000000
-active_tab_background   #fabd2f
-active_tab_font_style   bold-italic
-inactive_tab_foreground #7c6f64
-inactive_tab_background #282828
-inactive_tab_font_style normal
-# black
-color0                  #282828
-color8                  #7c6f64
-# red
-color1                  #cc241d
-color9                  #fb4934
-# green
-color2                  #98971a
-color10                 #b8bb26
-# yellow
-color3                  #d79921
-color11                 #fabd2f
-# blue
-color4                  #458588
-color12                 #83a598
-# purple
-color5                  #b16286
-color13                 #d3869b
-# aqua
-color6                  #689d6a
-color14                 #8ec07c
-# white
-color7                  #a89984
-color15                 #fbf1c7
-
-## VSCODE DARK by https://github/mofiqul
-#foreground              #d4d4d4
-#background              #1e1e1e
-#selection_foreground    #1e1e1e
-#selection_background    #d7ba7d
-#url_color               #0087BD
-#inactive_border_color   #222222
-#active_border_color     #222222
-#active_tab_foreground   #D4D4D4
-#active_tab_background   #373737
+## GRUVBOX by morhetz@gmail.com, adapted by witekdomitrz@gmail.com
+#cursor                  #fbf1c7
+#cursor_text             #000000
+#background              #282828
+#foreground              #fbf1c7
+#selection_foreground    #928374
+#selection_background    #ebdbb2
+#inactive_border_color   #282828
+#active_border_color     #7c6f64
+#active_tab_foreground   #000000
+#active_tab_background   #fabd2f
 #active_tab_font_style   bold-italic
-#inactive_tab_foreground #5A5A5A
-#inactive_tab_background #262626
+#inactive_tab_foreground #7c6f64
+#inactive_tab_background #282828
 #inactive_tab_font_style normal
 ## black
-#color0   #1e1e1e
-#color8   #808080
+#color0                  #282828
+#color8                  #7c6f64
 ## red
-#color1   #f44747
-#color9   #f44747
+#color1                  #cc241d
+#color9                  #fb4934
 ## green
-#color2   #608b4e
-#color10  #608b4e
+#color2                  #98971a
+#color10                 #b8bb26
 ## yellow
-#color3   #dcdcaa
-#color11  #dcdcaa
+#color3                  #d79921
+#color11                 #fabd2f
 ## blue
-#color4  #569cd6
-#color12 #569cd6
-## magenta
-#color5   #c678dd
-#color13  #c678dd
-## cyan
-#color6   #56b6c2
-#color14  #56b6c2
+#color4                  #458588
+#color12                 #83a598
+## purple
+#color5                  #b16286
+#color13                 #d3869b
+## aqua
+#color6                  #689d6a
+#color14                 #8ec07c
 ## white
-#color7   #d4d4d4
-#color15  #d4d4d4
+#color7                  #a89984
+#color15                 #fbf1c7
+
+# VSCODE DARK by https://github/mofiqul
+foreground              #d4d4d4
+background              #1e1e1e
+selection_foreground    #1e1e1e
+selection_background    #d7ba7d
+url_color               #0087BD
+inactive_border_color   #222222
+active_border_color     #222222
+active_tab_foreground   #D4D4D4
+active_tab_background   #373737
+active_tab_font_style   bold-italic
+inactive_tab_foreground #5A5A5A
+inactive_tab_background #262626
+inactive_tab_font_style normal
+# black
+color0   #1e1e1e
+color8   #808080
+# red
+color1   #f44747
+color9   #f44747
+# green
+color2   #608b4e
+color10  #608b4e
+# yellow
+color3   #dcdcaa
+color11  #dcdcaa
+# blue
+color4  #569cd6
+color12 #569cd6
+# magenta
+color5   #c678dd
+color13  #c678dd
+# cyan
+color6   #56b6c2
+color14  #56b6c2
+# white
+color7   #d4d4d4
+color15  #d4d4d4
