--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,12 +4,12 @@ map ctrl+shift+enter    new_window_with_cwd
 macos_quit_when_last_window_closed yes
 
 # WINDOW
-enable_audio_bell no
+enable_audio_bell				no
 background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
-initial_window_width    90c
+initial_window_width    108c
 initial_window_height   36c
 bell_border_color       #000010
 enabled_layouts fat:bias=76;full_size=1;mirrored=false
@@ -18,7 +18,7 @@ scrollback_lines        2000
 mouse_hide_wait         0.1
 
 # EDITOR
-shell_integration       no-cursor
+#shell_integration       no-cursor
 editor                  nvim
 input_delay             3
 cursor_blink_interval   0
@@ -28,7 +28,7 @@ tab_bar_style           separator
 tab_separator           ""
 
 # FONT
-font_size               18
+font_size               19
 font_family             Andale Mono
 bold_font               Andale Mono Bold
 italic_font             Andale Mono Italic
