--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -28,13 +28,13 @@ tab_bar_style           separator
 tab_separator           ""
 
 # FONT
-font_size               19
-font_family             Andale Mono
-bold_font               Andale Mono Bold
-italic_font             Andale Mono Italic
-#font_family             Liga SFMono Nerd Font
-#bold_font               Liga SFMono Nerd Font Bold
-#italic_font             Liga SFMono Nerd Font Italic
+font_size               18
+#font_family             Andale Mono
+#bold_font               Andale Mono Bold
+#italic_font             Andale Mono Italic
+font_family             Liga SFMono Nerd Font
+bold_font               Liga SFMono Nerd Font Bold
+italic_font             Liga SFMono Nerd Font Italic
 
 # CLIPBOARD
 detect_urls             yes
