--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,7 +10,7 @@ hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
 initial_window_width    90c
-initial_window_height   45c
+initial_window_height   30c
 bell_border_color       #000010
 enabled_layouts fat:bias=76;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -29,9 +29,7 @@ tab_separator           ""
 
 # FONT
 font_size               18
-font_family             Andale Mono
-bold_font               Andale Mono Bold
-italic_font             Andale Mono Italic
+font_family             JetBrains Mono
 #font_family             Liga SFMono Nerd Font
 #bold_font               Liga SFMono Nerd Font Bold
 #italic_font             Liga SFMono Nerd Font Italic
