--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -29,6 +29,8 @@ tab_separator           ""
 # FONT
 font_size               18
 font_family             JetBrains Mono
+bold_font               JetBrains Mono Bold
+italic_font             JetBrains Mono Italic
 #font_family             Liga SFMono Nerd Font
 #bold_font               Liga SFMono Nerd Font Bold
 #italic_font             Liga SFMono Nerd Font Italic
@@ -77,6 +79,68 @@ strip_trailing_spaces   always
 ## white
 #color7                  #a89984
 #color15                 #fbf1c7
+
+## XCODE DARK "HIGH CONTRAST"
+#foreground              #FFFFFF
+#background              #1F1F24
+#selection_foreground    #1E1E1E
+#selection_background    #D7BA7D
+#url_color               #0087BD
+#inactive_border_color   #222222
+#active_border_color     #222222
+#active_tab_foreground   #D4D4D4
+#active_tab_background   #373737
+#active_tab_font_style   bold-italic
+#inactive_tab_foreground #5A5A5A
+#inactive_tab_background #262626
+#inactive_tab_font_style normal
+## black
+#color0   #1e1e1e
+#color8   #808080
+## red
+#color1   #f44747
+#color9   #f44747
+## green
+#color2   #608b4e
+#color10  #608b4e
+## yellow
+#color3   #dcdcaa
+#color11  #dcdcaa
+## blue
+#color4  #569cd6
+#color12 #569cd6
+## magenta
+#color5   #c678dd
+#color13  #c678dd
+## cyan
+#color6   #56b6c2
+#color14  #56b6c2
+## white
+#color7   #d4d4d4
+#color15  #d4d4d4
+
+## XCODE LIGHT "HIGH CONTRAST"
+#background  #FFFFFF
+#foreground  #000000
+#cursor      #CCCCCC
+#selection_foreground #f8f8f8
+#selection_background #ececec
+#color0 #000000
+#color8 #000000
+#color1 #de3d35
+#color9 #de3d35
+#color2 #3e953a
+#color10 #3e953a
+#color3 #d2b67b
+#color11 #d2b67b
+#color4 #2f5af3
+#color12 #2f5af3
+#color5 #950095
+#color13 #a00095
+#color6 #3e953a
+#color14 #3e953a
+#color7 #bbbbbb
+#color15 #ffffff
 
 # VSCODE DARK by https://github/mofiqul
 foreground              #d4d4d4
