--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,7 +9,7 @@ background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
-initial_window_width    93c
+initial_window_width    85c
 initial_window_height   27c
 bell_border_color       #000010
 enabled_layouts fat:bias=76;full_size=1;mirrored=false
@@ -24,10 +24,10 @@ cursor_blink_interval   0
 
 # TABS
 tab_bar_style           separator
-tab_separator           ""
+tab_separator           "|"
 
 # FONT
-font_size               18
+font_size               21
 font_family             JetBrains Mono
 
 # CLIPBOARD
